poke/testsuite/poke.pkl/load-diag-1.pk
/* { dg-do compile } */

defvar foo = 10;
load ___foobar___; /* { dg-error "" } */
defvar bar = 20;
